--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
   },
   "devDependencies": {
     "babel-plugin-import": "^1.11.0",
+    "classnames": "^2.2.6",
     "prop-types": "^15.6.2"
   }
 }
