--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
+    "lodash": "^4.17.11",
     "mini-css-extract-plugin": "0.4.3",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
@@ -68,9 +69,6 @@
     "build": "npm run build:copy-all-files",
     "build:copy-all-files": "node scripts/copy-all-files.js",
     "generate": "plop --plopfile scripts/generators/index.js"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": [
     ">0.2%",
@@ -122,6 +120,7 @@
   "devDependencies": {
     "babel-plugin-import": "^1.11.0",
     "classnames": "^2.2.6",
+    "eslint-config-airbnb": "^17.1.0",
     "prop-types": "^15.6.2"
   }
 }
