--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
-    "lodash": "^4.17.11",
     "mini-css-extract-plugin": "0.4.3",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
@@ -52,6 +51,7 @@
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1",
     "react-test-renderer": "^16.7.0",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
@@ -121,5 +121,8 @@
     "classnames": "^2.2.6",
     "eslint-config-airbnb": "^17.1.0",
     "prop-types": "^15.6.2"
+  },
+  "peerDependencies": {
+    "lodash": "^4.17.11"
   }
 }
